MapStruct library caused some issues during deployment, so I rewrote the mappers manually